platform/k8s/planner-query/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: planner-query-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
  - hosts:
    - planner.localhost
    secretName: localhost-tls-secret
  rules:
  - host: planner.localhost
    http:
      paths:
      - path: /query(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: planner-query
            port:
              number: 8080
